--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -5,9 +5,9 @@ ports:
     onOpen: ignore
 tasks:
   - name: MySQL
-    init: mysqld
+    init: nohup mysqld &
+        mysql -e "create database chat_system" &
+        mysql < src/chat_system.sql &
   - name: Welcome
     command: >
-        mysql -e "create database chat_system";
-        mysql < src/chat_system.sql;
         python3 welcome.py;
