removoed daemon from docker

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,6 +6,8 @@ ports:
 tasks:
   - name: MySQL
     init: >
+        /usr/bin/mysqld_safe &
+        sleep 5;
         mysql -e "create database chat_system";
         mysql < examples/chat_system.sql;
   - name: Welcome
